7_circuitbreaker/deployment/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vertx-greet-v2
spec:
  selector:
    matchLabels:
      app: vertx-greet
  replicas: 1
  template:
    metadata:
      labels:
        app: vertx-greet
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: vertx-greet
          image: docker.io/sholly/vertx-greet:1.0
          imagePullPolicy: Always
          securityContext:
            privileged: false
